--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+html,
+body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+
 body {
     background: #1d1d1d;
     font-family: 'Segoe UI', sans-serif;
